fixed link alignment, home text animation

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,17 +43,6 @@ body {
     grid-template-columns: 8vw 84vw 8vw;
     grid-template-rows: 10vh 80vh 10vh;
 
-    .grid-box-1,
-    .grid-box-2,
-    .grid-box-3,
-    .grid-box-4,
-    .grid-box-6,
-    .grid-box-7,
-    .grid-box-8,
-    .grid-box-9 {
-        // background: grey;
-    }
-
     .grid-box {
         z-index: 50;
 
@@ -71,6 +60,7 @@ body {
         &.grid-box-5 {
             display: flex;
             justify-content: center;
+            align-items: center;
 
             .grid-wrap-projects {
                 // height: 100%;
@@ -80,6 +70,17 @@ body {
                 grid-gap: 1rem;
                 max-width: 80%;
                 max-height: 100%;
+            }
+
+            .grid-wrap-about {
+                color: #525252;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+
+                .bio,
+                .tech {
+                    padding: 2rem;
+                }
             }
 
             .card-wrapper {
@@ -107,15 +108,18 @@ body {
             // background: rgb(7, 166, 230);
             // border: 2px solid rgb(7, 166, 230);
             box-shadow: 5px 5px 5px rgb(192, 192, 192);
-            border-radius: .25rem;
+            // border-radius: .25rem;
             // color: white;
             // color: #444;
             background: #444;
             display: flex;
             align-items: center;
             justify-content: center;
+            transform: skewY(5px);
             transition: all 0.5s ease;
             z-index: 5;
+
+
             &:hover {
                 // background: rgb(100, 100, 100);
                 // box-shadow: 5px 5px 0 rgb(177, 177, 177);
@@ -212,10 +216,11 @@ body {
 
 .nav-link-container {
     height: 24rem;
-    max-width: 100%;
+
     .route-link {
         transform: rotate(90deg);
         margin-top: 75px;
+
         a {
             color: white;
             transition: all 0.5s ease;
@@ -293,11 +298,7 @@ a {
     font-weight: 600;
 }
 
-.grid-wrap-about {
-    color: #525252;
-    display: grid;
-    grid-template-columns: 3;
-}
+
 
 .project-card-tw {
     // display: flex;
@@ -323,6 +324,40 @@ ul {
     margin-bottom: 1rem;
 }
 
+.tracking-in-contract {
+    color: #444;
+    font-size: 5rem;
+	-webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+ @-webkit-keyframes tracking-in-contract {
+    0% {
+      letter-spacing: 2em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      letter-spacing: normal;
+      opacity: 1;
+    }
+  }
+  @keyframes tracking-in-contract {
+    0% {
+      letter-spacing: 2em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      letter-spacing: normal;
+      opacity: 1;
+    }
+  }
+  
 
 // .main-content {
 //     min-height: 100%;
